--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>MyWeb</title>
+    <title>paste</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="tools">
+            <div class="butt" onclick="clickbutt('draw')">draw</div>
+            <div class="butt" onclick="clickbutt('square')">line</div>
+            <div class="butt" onclick="clickbutt('line')">square</div>
+            <div class="butt" onclick="clickbutt('circle')">square</div>
+        </div>
+        <canvas width="500" height="500">
+            Your Browser doesn't support canvas.
+        </canvas>
 
-    <canvas id="pixel" width="500" height="500">
-        Your Browser doesn't support canvas.
-    </canvas>
+    </div>
 
-    <input type="number" id="size" value=40 min=10 step=10 max=500 default=50 onchange=drawGrid()>
-    <button class="line" onclick=selectTool(1)>line</button>
-    <button class="draw" onclick=selectTool(2)>draw</button>
 
-    <button class="square"></button>
     <script src="script.js"></script>
 
 </body>
