--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>paste</title>
+    <title>PixelMiniApp</title>
 </head>
 
 <body>
     <div class="container">
         <div class="tools">
             <div class="butt" onclick="clickbutt('draw')">draw</div>
-            <div class="butt" onclick="clickbutt('square')">line</div>
-            <div class="butt" onclick="clickbutt('line')">square</div>
-            <div class="butt" onclick="clickbutt('circle')">square</div>
+            <div class="butt" onclick="clickbutt('line')">line</div>
+            <div class="butt" onclick="clickbutt('square')">square</div>
+            <div class="butt" onclick="clickbutt('circle')">circle</div>
         </div>
         <canvas width="500" height="500">
             Your Browser doesn't support canvas.
